<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tuto_cmnds_title1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/assistant"
        android:padding="8dp"
        android:text="@string/command_name"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tuto_cmnds_desc1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/assistant"
        android:padding="6dp"
        android:text="@string/tutorial_command_name"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tuto_cmnds_title2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/assistant"
        android:padding="8dp"
        android:text="@string/parameters"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tuto_cmnds_dec2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/assistant"
        android:padding="6dp"
        android:text="@string/tutorial_parameters"
        android:textSize="14sp" />
</LinearLayout>