<?xml version="1.0" encoding="utf-8"?>
<merge>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="2dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="2dp"
    android:elevation="1dp"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/widget_builder_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/assistant_semibold"
        android:padding="4dp"
        android:text="@string/text_label" />

    <EditText
        android:id="@+id/widget_label_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="@drawable/card_bg_material_shadow"
        android:ems="10"
        android:fontFamily="@font/assistant"
        android:hint="@string/label"
        android:inputType="textPersonName"
        android:padding="16dp"
        android:textSize="16dp" />

    <CheckBox
        android:id="@+id/show_percentage_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_bg_material_shadow"
        android:fontFamily="@font/assistant"
        android:text="@string/show_percentage"
        android:textColor="#555555" />

    <CheckBox
        android:id="@+id/show_rtl_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_bg_material_shadow"
        android:fontFamily="@font/assistant"
        android:text="@string/show_text_to_the_right"
        android:textColor="#555555" />
</LinearLayout>
</merge>