<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:id="@+id/preference_size_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="2dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="2dp"
    android:elevation="1dp"
    android:orientation="vertical"
    android:padding="8dp"
    >

    <TextView
        android:id="@+id/size_preference_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/assistant_semibold"
        android:padding="4dp"
        android:text="@string/size_label" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/card_bg_material_shadow"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/custom_size_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/assistant"
            android:text="@string/custom" />

        <SeekBar
            android:id="@+id/custom_size_seek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="16dp" />
    </LinearLayout>

    <CheckBox
        android:id="@+id/wrap_content_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/card_bg_material_shadow"
        android:fontFamily="@font/assistant"
        android:text="@string/wrap_content" />

</LinearLayout>
</merge>