<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:id="@+id/builder_range"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="2dp"
        android:elevation="1dp"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/widget_builder_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/assistant_semibold"
            android:padding="4dp"
            android:text="@string/range_label" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/widget_min_range_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/card_bg_material_shadow"
                android:ems="10"
                android:fontFamily="@font/assistant"
                android:hint="@string/min"
                android:inputType="numberSigned"
                android:padding="16dp"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/widget_max_range_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                android:background="@drawable/card_bg_material_shadow"
                android:ems="10"
                android:fontFamily="@font/assistant"
                android:hint="@string/max"
                android:inputType="numberSigned"
                android:padding="16dp"
                android:textSize="16sp" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/last_value_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_bg_material_shadow"
            android:text="Remeber last value after closing the GUI" />
    </LinearLayout>
</merge>