<?xml version="1.0" encoding="utf-8"?>
<merge>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/builder_color"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="2dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="2dp"
    android:elevation="1dp"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/widget_builder_color_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:text="@string/color_label"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/primary_color_label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/primary_color_label"
        app:layout_constraintEnd_toStartOf="@+id/secondary_color_label_text"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/widget_builder_color_title" />

    <TextView
        android:id="@+id/secondary_color_label_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/secondary_color_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/primary_color_label_text"
        app:layout_constraintTop_toTopOf="@+id/primary_color_label_text" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/secondary_color_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#FF9800"
        app:elevation="0dp"
        app:fabSize="mini"
        app:layout_constraintEnd_toEndOf="@+id/secondary_color_label_text"
        app:layout_constraintStart_toStartOf="@+id/secondary_color_label_text"
        app:layout_constraintTop_toBottomOf="@+id/secondary_color_label_text" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/primary_color_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="#3F51B5"
        app:elevation="0dp"
        app:fabSize="mini"
        app:layout_constraintEnd_toEndOf="@+id/primary_color_label_text"
        app:layout_constraintStart_toStartOf="@+id/primary_color_label_text"
        app:layout_constraintTop_toBottomOf="@+id/primary_color_label_text" />


</androidx.constraintlayout.widget.ConstraintLayout>
</merge>
