<?xml version="1.0" encoding="utf-8"?>

<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/assistant_semibold"
                android:gravity="center"
                android:padding="8dp"
                android:text="Widget Documentation"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/assistant_semibold"
                android:padding="8dp"
                android:text="Widget description:"
                android:textColor="@color/app_color" />

            <TextView
                android:id="@+id/wdoc_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/assistant"
                android:padding="16dp"
                android:text="@string/doc_accelerometer_desc"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/assistant_semibold"
                android:padding="8dp"
                android:text="Widget requirements:"
                android:textColor="@color/app_color" />

            <TextView
                android:id="@+id/wdoc_reqs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/assistant"
                android:padding="16dp"
                android:text="@string/doc_accelerometer_reqs"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/assistant"
                android:text="example command:" />

            <include
                layout="@layout/item_command"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/assistant_semibold"
                android:padding="8dp"
                android:text="Usage with GuiConnectHelper:"
                android:textColor="@color/app_color" />

            <TextView
                android:id="@+id/wdoc_usage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:padding="14dp"
                android:text="@string/doc_accelerometer_usage"
                android:textSize="14sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/wdoc_yt_tutos"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="Open tutorials &amp; examples"
                android:textColor="#7986CB"
                app:cornerRadius="5dp"
                app:rippleColor="#7986CB"
                app:strokeColor="#7986CB" />
        </LinearLayout>
    </ScrollView>